[tool.poetry]
name = "nftlabs-sdk"
version = "0.3.0"
description = "Official Web3sdks sdk"
authors = ["Ibrahim Ahmed <abe@web3sdks.com>", "Jake Loo <jake@web3sdks.com>", "Ayush Pathak <ayush@web3sdks.com>"]
packages = [
    { include = "nftlabs/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
web3 = "^5.24.0"
web3sdks-web3 = "^5.24.8"
web3sdks-contract-wrappers = "^2.0.0"
dataclasses-json = "^0.5.6"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
